tests/parser/continue-statement-outside-loop.stderr
error: 'continue' outside loop
 --> $DIR/continue-statement-outside-loop.lox:1:15
  |
1 | while true {} continue;
  |               ^^^^^^^^
